<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="day_of_week_monday">Mon</string>
    <string name="day_of_week_tuesday">Tue</string>
    <string name="day_of_week_wednesday">Wed</string>
    <string name="day_of_week_thursday">Thu</string>
    <string name="day_of_week_friday">Fri</string>
    <string name="day_of_week_saturday">Sat</string>
    <string name="day_of_week_sunday">Sun</string>

    <string name="activity_hint">Activities</string>
    <string name="category_hint">Categories</string>
    <string name="record_tag_hint">Record tags</string>
    <string name="record_tag_hint_short">Tags</string>
    <string name="nothing_selected">Nothing selected</string>
...
    <string name="change_record_type_icon_image_hint">Icon</string>
    <string name="change_record_type_icon_text_hint">Text</string>
    <string name="change_record_type_icon_emoji_hint">Emoji</string>
    <string name="change_record_type_icon_search_hint">Search (in English)</string>
    <string name="change_record_type_no_icon">No icon</string>
    <string name="change_record_favourite_icons_hint">Favourite icons</string>
    <string name="change_record_type_save">Save</string>
    <string name="change_record_message_choose_name">Choose a name</string>
    <string name="change_record_message_name_exist">Name already used</string>
    <string name="change_record_type_note_hint">Note</string>
    <string name="change_record_type_categories_empty">No categories added</string>
    <string name="change_record_type_goal_time_disabled">Disabled</string>
    <string name="change_record_type_goal_time_hint">Goal</string>
    <string name="change_record_type_limit_time_hint">Limit</string>
    <string name="change_record_type_additional_hint">Additional</string>
    <string name="change_record_type_default_duration">Default duration</string>
    <string name="change_record_type_default_duration_hint">Activities with default duration are tracked immediately on click.</string>
    <string name="change_record_type_goal_time_description">Notification will be shown after reaching the goal</string>
    <string name="change_record_type_duplicate_hint">Will create a copy of this activity</string>
    <string name="change_record_type_session_goal_time">Session</string>
    <string name="change_record_type_daily_goal_time">@string/range_day</string>
    <string name="change_record_type_weekly_goal_time">@string/range_week</string>
    <string name="change_record_type_monthly_goal_time">@string/range_month</string>
    <string name="change_record_type_goal_duration">Duration</string>
    <string name="change_record_type_goal_count">Count</string>
    <string name="change_record_type_delete_alert">Delete?</string>

...
    <string name="types_compare_hint">Comparison</string>
    <string name="types_filter_show_all">Show all</string>
    <string name="types_filter_hide_all">Hide all</string>
    <string name="chart_filter_type_hint">Statistics type</string>
    <string name="chart_filter_categories_empty">No tags added</string>

    <string name="duration_dialog_save">Save</string>
    <string name="duration_dialog_disable">Disable</string>

    <string name="color_selection_base_color_hint">Select base color</string>
    <string name="color_selection_adjust_color_hint">Adjust color</string>
    <string name="color_selection_final_color_hint">Final color</string>

    <string name="csv_export_settings_filename_hint">Custom file name</string>
...
