<?xml version="1.0" encoding="utf-8"?>
<com.example.util.simpletimetracker.feature_views.StatisticsGoalView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewStatisticsGoalItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardElevation="@dimen/record_type_card_elevation"
    tools:itemColor="@color/red_800"
    tools:itemGoal="goal 8h 30m"
    tools:itemGoalCurrent="1h 30m"
    tools:itemGoalPercent="33%"
    tools:itemCheckState="goalReached"
    tools:itemName="Statistics" />