...
            android:id="@+id/fieldRecordTypeGoalType"
            style="@style/InputFieldCard"
            android:layout_width="0dp"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginStart="@dimen/edit_screen_field_margin_horizontal"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toStartOf="@id/fieldChangeRecordTypeGoalDuration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...
